css 가상클래스 선택자 연습
-:hover
마우스 호버

-:active
마우스를 클릭하는 동안

-:focus
포커스된 동안에만 선택 (대화형 콘텐츠에서 사용가능)

--- a/main.css
+++ b/main.css
@@ -1,11 +1,27 @@
-body {
-  margin: 0;
-  padding: 0;
+a:hover {
+  font-weight: bold;
+  font-size: 20px;
 }
-div {
-  background: yellow;
-  width: 100px
-  height: 30px
-  margin: 20px
-  padding: 20px
+.box {
+  width: 100px;
+  height : 100px;
+  background : tomato;
+  transition: 0.4s;
+}
+.box:hover {
+  width: 200px;
+}
+.box:active {
+  width: 400px;
+  background: yellowgreen;
+}
+input {
+  width: 100px;
+  outline: none;
+  border: 1px solid lightgray;
+  padding: 5px 10px
+}
+input:focus {
+  border-color: red;
+  width: 200px;
 }
