--- a/main.css
+++ b/main.css
@@ -1,20 +1,7 @@
-.fruits {
-  font-size: 40px;
-  font-weight: bold;
-}
-.fruits p:nth-of-type(1) {
-  color: red;
-}
-
 ul {
   font-size: 40px;
 }
-ul li::before {
-  content: "";
-  width: 30px;
-  height: 30px;
-  background: tomato;
-  margin-right: 20px;
-  display: inline-block;
-  border-radius: 50px;
+ul li::after {
+  content: ".0";
+  url(https://heropy.blog/css/images/logo.png);
 }
