--- a/main.css
+++ b/main.css
@@ -43,5 +43,8 @@ div {
   height: 200px;
   border: 4px solid tomato;
   background: orange;
-  margin: 50%
+  margin-top: 10px;
+  margin-right: 500px;
+  margin-bottom: 100px;
+  margin-left: 100px;
 }
