--- a/new.css
+++ b/new.css
@@ -11,3 +11,11 @@ input:nth-child(2) {
 input:nth-child(3) {
   opacity: 0;
 }
+div {
+  width: 200px;
+  height: 200px;
+  background: tomato;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
