--- a/background.css
+++ b/background.css
@@ -14,3 +14,16 @@ section {
   background-position: right bottom;
   background-attachment: fixed;
 }
+.container {
+  width: 400px;
+  height: 300px;
+  border: 4px solid red;
+  margin: 50px;
+  overflow: auto;
+  background-image: url("https://www.starbucks.co.kr/common/img/common/logo.png");
+  background-size: 50%;
+  background-attachment: local;
+}
+.for-scroll {
+  height: 2000px;
+}
