--- a/background.css
+++ b/background.css
@@ -15,13 +15,14 @@ section {
   background-attachment: fixed;
 }
 .container {
-  width: 400px;
-  height: 300px;
+  width: 100px;
+  height: 100px;
   border: 4px solid red;
   margin: 50px;
   overflow: auto;
   background-image: url("https://www.starbucks.co.kr/common/img/common/logo.png");
-  background-size: 50%;
+  background-size: contain;
+  background-repeat: repeat-y;
   background-attachment: local;
 }
 .for-scroll {
