--- a/transition.css
+++ b/transition.css
@@ -1,9 +1,9 @@
 .box {
   width: 100px;
   height: 100px;
+  border: 4px solid orange;
   background: red;
-  margin: 50px;
-  transition: 2s;
+  transition: 1s;
   display: flex;
   font-size: 30px;
   color: white;
@@ -13,5 +13,5 @@
 .box:hover {
   width: 300px;
   background: blue;
-  transform: translate(30px 30px);
+  transform: translate(30px, 30px);
 }
