--- a/transition.css
+++ b/transition.css
@@ -45,7 +45,7 @@ img {
 }
 img {
   width: 400px;
-  border: 3px solid orange;
+  border: 3px solid lightgray;
   transition: 1s;
   transform: rotateX(-45deg);
 }
