--- a/transition.css
+++ b/transition.css
@@ -47,5 +47,5 @@ img {
   width: 400px;
   border: 3px solid lightgray;
   transition: 1s;
-  transform: rotateX(-45deg);
+  transform: rotateY(-45deg);
 }
