--- a/transition.css
+++ b/transition.css
@@ -1,52 +1,48 @@
-.box {
-  width: 100px;
-  height: 100px;
-  border: 4px solid orange;
-  background: red;
-  transition: 1s;
+
+.cards{
+  padding: 50px;
+}
+.card {
+  width: 150px;
+  height: 200px;
+  position: relative;
+  perspective: 600px;
+  float: left;
+  margin-right: 100px;
+}
+.card:last-child {
+  margin-right: 0;
+}
+.card .face {
+  width: 200px;
+  height: 200px;
+  border: 4px solid lightgray;
+  border-radius: 10px;
   display: flex;
-  font-size: 30px;
-  color: white;
   justify-content: center;
   align-items: center;
-}
-.box:hover {
-  width: 300px;
-  background: blue;
-  transform: translate(30px, 30px) skew(45deg);
-}
-img {
-  width: 100px;
-  height: 50px;
-  margin: 50px;
-  border: 3px dashed orange;
   transition: 1s;
-  transform: perspective(100px) rotateY(180deg);
+  position: absolute;
+  backface-visibility: hidden;
+  background-color: white;
 }
-.perspective {
+.card .face-front {
+  transform: rotateY(0deg);
+}
+.card:active .face-front {
+  transform: rotateY(-180deg);
+}
+.card .face-back {
+  transform: rotateY(180deg);
+  background-image: url("https://heropy.blog/css/images/pattern.png");
+}
+.card:active .face-back {
+  transform: rotateY(0deg);
+}
+.card .face-front img {
   width: 200px;
-  perspective: 500px;
-  margin: 50px;
-  transform-style: preserve-3d;
-  perspective-origin: 50% 100%;
+  filter: grayscale();
 }
-.grandparent {
-  width: 400px;
-  border: 3px solid dodgerblue;
-  transition: 3s;
-  transform: rotateX(-45deg);
-  transform-style: preserve-3d;
-}
-.parent {
-  width: 400px;
-  border: 3px solid orange;
-  transition: 1s;
-  transform: rotateY(-45deg);
-  transform-style: preserve-3d;
-}
-img {
-  width: 400px;
-  border: 3px solid lightgray;
-  transition: 1s;
-  transform: rotateY(-45deg);
+.card .face-back img {
+  width: 150px;
 }
