--- a/order.css
+++ b/order.css
@@ -1,25 +1,33 @@
 .container {
   border: 4px solid;
   display: flex;
+  align-items: flex-end;
+  flex-wrap: wrap;
 }
 .container .item {
   width: 100px;
-  height: 100px;
-  font-size: 30px;
+  height: 100px
   color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background: tomato;
   border: 4px dashed red;
   border-radius: 10px;
   flex: 1;
 }
-.item1 {
-  order: 1;
-  flex-grow: 2;
-}
-.item5 {
-  order: -1;
+.container .item1 {
   align-self: center;
+}
+.container .item2 {
+  align-self: stretch;
+}
+
+.container .item3 {
+  align-self: flex-start;
+}
+
+.container .item4 {
+  align-self: flex-end;
+  height: 300px;
+}
+.container .item5 {
+  align-self: flex-end;
 }
