--- a/grid_1.css
+++ b/grid_1.css
@@ -3,6 +3,8 @@
   width: 300px;
   height: 250px;
   border: 4px solid lightgray;
+  grid-template-rows: repeat(2, 100px);
+  grid-template-columns: repeat(3, 1fr);
 }
 .item {
   border: 3px dashed orange;
