--- a/grid_1.css
+++ b/grid_1.css
@@ -1,11 +1,22 @@
 .container {
-  display: grid;  /*block요소같은 그리드*/
-  width: 300px;
-  height: 250px;
-  border: 4px solid lightgray;
-  grid-template-rows: repeat(2, 100px);
+  width: 600px;
+  display: grid;  /*블록요소같은그리드*/
+  grid-template-rows: repeat(4, 100px);
   grid-template-columns: repeat(3, 1fr);
+  border: 4px solid lightgray;
 }
 .item {
-  border: 3px dashed orange;
+  border: 10px solid orange;
+  font-size: 30px;
+}
+.item:nth-child(1) {
+  grid-column: 1 / 3;
+  grid-row: 1 / 3;
+}
+.item:nth-child(2) {
+  grid-row: 1 / 3;
+}
+.item:nth-child(4) {
+  grid-row: 4 / 5;
+  grid-column: -1 / -4;
 }
