--- a/grid_2.css
+++ b/grid_2.css
@@ -5,8 +5,8 @@
   grid-template-columns: repeat(3, 1fr);
   grid-template-areas:
   "header header header"
-    "main main aside"
-    "footer footer footer";
+    "main . aside"
+    ". footer footer";
 }
 .item {
   border: 10px solid blue;
