--- a/grid_6.css
+++ b/grid_6.css
@@ -1,8 +1,8 @@
 .container {
   border: 10px solid lightgray;
   display: grid;
-  grid-template-rows: 100px 100px;
-  grid-template-columns: fit-content(300px) fit-content(100%);
+  grid-template-columns: 1fr min-content;
+  word-break: keep-all;
 }
 .item {
   border: 10px dashed lightgreen;
